Closed
Bug 748473
Opened 13 years ago
Closed 13 years ago
Android back button doesn't work anymore
Categories
(Firefox for Android Graveyard :: Shell Integration, defect)
Tracking
(firefox14+ verified)
VERIFIED
FIXED
Firefox 15
People
(Reporter: glandium, Assigned: mbrubeck)
References
Details
(Keywords: regression)
Attachments
(1 file)
|
1.31 KB,
patch
|
cpeterson
:
review+
lsblakk
:
approval-mozilla-aurora+
|
Details | Diff | Splinter Review |
It stopped working a few nightlies ago.
(using xul/tablet nightly on Asus Transformer TF101 under ICS, if that matters)
XUL Nightly (14) isn't going to ship I think, though? I could be mistaken.
| Assignee | ||
Comment 2•13 years ago
|
||
(In reply to Naoki Hirata :nhirata from comment #1)
> XUL Nightly (14) isn't going to ship I think, though? I could be mistaken.
We plan to ship it on the beta channel at least, for tablets.
OH. good point.
| Assignee | ||
Comment 4•13 years ago
|
||
I can reproduce this. Nominating for tracking-firefox14 because this will be a blocker for releasing Firefox 14 beta for tablets.
Assignee: nobody → mbrubeck
status-firefox14:
--- → affected
tracking-firefox14:
--- → ?
Keywords: regression,
regressionwindow-wanted
Comment 5•13 years ago
|
||
Regression window is between the 4/20 and 4/21 nightlies:
http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=22bfdebf5cae&tochange=021f95903ded
I will try to find time to isolate further using hg bisect tomorrow.
| Assignee | ||
Comment 6•13 years ago
|
||
Thanks. Looks like a regression from https://hg.mozilla.org/mozilla-central/rev/a6dd3218bf6a (bug 742036), which removed code to map KEYCODE_BACK to NS_VK_ESCAPE;
| Assignee | ||
Comment 7•13 years ago
|
||
Attachment #618085 -
Flags: review?(cpeterson)
Comment 8•13 years ago
|
||
(In reply to Matt Brubeck (:mbrubeck) from comment #7)
> Created attachment 618085 [details] [diff] [review]
> patch
This patch fixes the issue for me and is now included in my builds available at http://www.wg9s.com/mozilla/firefox/
Comment 9•13 years ago
|
||
Just my opinion, but I think the severity of this needs to be higher.
Severity: normal → major
Comment 10•13 years ago
|
||
I should have explained. Form either the Add-ons page or the about:fennec page, there does not seem to be a way to actually get back to browsing without killing via task manager and restarting.
Comment 11•13 years ago
|
||
Comment on attachment 618085 [details] [diff] [review]
patch
Review of attachment 618085 [details] [diff] [review]:
-----------------------------------------------------------------
r+ with updated comments.
::: widget/android/nsWindow.cpp
@@ +1624,5 @@
> }
>
> switch (androidKeyCode) {
> // KEYCODE_UNKNOWN (0) ... KEYCODE_POUND (18)
> + case AndroidKeyEvent::KEYCODE_BACK: return NS_VK_ESCAPE;
Since KEYCODE_BACK falls within the missing KEYCODE_UNKNOWN -> KEYCODE_POUND range, I think the comments should be updated to indicate the new missing keycode ranges:
// KEYCODE_UNKNOWN (0) ... KEYCODE_HOME (3)
case AndroidKeyEvent::KEYCODE_BACK: return NS_VK_ESCAPE;
// KEYCODE_CALL (5) ... KEYCODE_POUND (18)
Attachment #618085 -
Flags: review?(cpeterson) → review+
Comment 12•13 years ago
|
||
Comment on attachment 618085 [details] [diff] [review]
patch
[Approval Request Comment]
Regression caused by (bug #): 742036
User impact if declined: XUL Fennec's Back button won't work!
Testing completed (on m-c, etc.):
Risk to taking this patch (and alternatives if risky): Not risky.
String changes made by this patch: None
Attachment #618085 -
Flags: approval-mozilla-aurora?
| Assignee | ||
Comment 13•13 years ago
|
||
Status: NEW → ASSIGNED
Target Milestone: --- → Firefox 15
Comment 14•13 years ago
|
||
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Comment 15•13 years ago
|
||
Comment on attachment 618085 [details] [diff] [review]
patch
[Triage comment]
Please go ahead and land to Aurora (Firefox 14)
Attachment #618085 -
Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Updated•13 years ago
|
| Assignee | ||
Comment 16•13 years ago
|
||
You need to log in
before you can comment on or make changes to this bug.
Description
•