Bug 748473 - Back button is no longer mapped to escape key [r=cpeterson]